<resources>
    <string name="app_name">Ski-Easy</string>
    <string name="labelTest">Prove GitHub</string>
    <string name="title_home">Top Slopes</string>
    <string name="title_dashboard">Areas</string>
    <string name="title_notifications">My Profile</string>

    <string name="areasTitle">SELECT YOUR AREA</string>
    <string name="topSlopes">Top Slopes</string>
    <string name="slopesOpened">20/20 slopes opened</string>
    <string name="SlopesList">Slopes List</string>
    <string name="slopesListTitle"> Slopes in </string>
    <string name="defaultTemp">0.00 °C</string>
    <string name="reviewTitle">What do other skiers think?</string>
    <string name="now">right now</string>
    <string name="first_slope">Oberholz</string>
    <string name="second_slope">Pian Ra Valles</string>
    <string name="third_slope">Funivia Falora</string>
    <string name="fourth_slope">Gran Risa</string>
    <string name="fifth_slope">Torre di Pisa</string>
    <string name="addReviewHint">Enter your comment here...</string>
    <string name="level_difficulty" >Level of difficulty: high </string>
    <string name="altitude">Top Elevation: 1446 m.s.l.m</string>
    <string name="slopeLength">Length: 3.7 Km</string>
    <string name="slopeTraffic">Traffic right now: 48 people</string>
    <string name="maxGradientq">Slope maximum gradient: 62%</string>
    <string name="baseElev">Base elevation: 1120 m.s.l.m</string>
    <string name="vertical">Vertical: 326 m</string>
    <string name="profile_name">Skier_92</string>
    <string name="profile_statistic">Your personal statistics</string>
    <string name="length">Covered Distance: 67,8 km</string>
    <string name="preferred_slope">Favourite Slope: Gran Risa</string>
    <string name="speed">Max Speed: 32 km/h</string>
    <string name="last_slope">Last Slope: 5 Torri</string>
    <string name="average">Average Speed: 23 km/h</string>
</resources>
